(library
  (name orxgboost)
  (public_name orxgboost)
  (modules result utls gbtree gblinear gnuplot)
  (libraries batteries dolog))

(executables
  (names test)
  (modules test)
  (libraries dolog batteries cpm orxgboost))

(executables
  (names model)
  (public_names orxgboost_model)
  (modules model)
  (libraries minicli dolog batteries cpm orxgboost parany))
